# name-forge

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  NameForge.html  NameForge.ipynb  Pipfile  Pipfile.lock.ubuntu  README.md  developer_guide.md  pyproject.toml  versions.md
app/: entrypoint.sh  server.py
data/: merge_by_version.py  test_dataset.csv  train_dataset.csv
data/llm-as-a-judge-training/: sample.py  test_dataset_sample.csv
data/raw/: test_dataset-v1.0.csv  test_dataset-v2.0-a.csv  test_dataset-v2.0-b.csv  train_dataset-v1.0.csv  train_dataset-v2.0-a.csv  train_dataset-v2.0-b.csv
hooks/: pre-commit.py
outputs/: mistral_7B_lora-q4_k_m-v2.0_domains.csv  mistral_7B_lora-q4_k_m-v2.1_domains.csv
outputs/judged/: correlation_summary_pivot.csv  mistral_7B_lora-q4_k_m-v2.0_domains.csv  mistral_7B_lora-q4_k_m-v2.1_domains.csv  mistral_v1.0-human.csv  mistral_v2.1-human.csv  summary.csv
prompts/: judge-prompt.yaml  prompt-1.yaml
src/: convert_to_gguf.py  data_utils.py  domain_generator.py  download_tokenizer.py  fine_tune.py  generate_domains_from_csv.py  get_pearsons_corr.py  simple_judge.py  vocab.py
src/eval/: Dockerfile  generate_domains_from_csv.py  llm_as_a_judge.py  simple_judge.py
src/fine_tune/: data_utils.py  fine_tune.py
src/lib/: local_llm_wrapper.py
